comment improvements
